<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
           android:id="@+id/group1">
        <item
            android:id="@+id/nav_calls"
            android:icon="@mipmap/iconscalls"
            android:title="@string/menu_calls" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@mipmap/iconscheld"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_mcanteen"
            android:icon="@mipmap/iconscanteen"
            android:title="@string/menu_mcanteen" />
        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/iconsmap"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@mipmap/iconsplan"
            android:title="@string/menu_plan" />
        <item
            android:id="@+id/nav_link"
            android:icon="@mipmap/iconslinks"
            android:title="@string/menu_link" />
    </group>
    <group android:id="@+id/group2"
           android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faq"
            android:icon="@mipmap/iconsfaq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/iconssettings"
            android:title="@string/menu_settings" />
    </group>
</menu>